update voucher app
