# src/routes/event.ts
@@ -1,7 +1,7 @@
 import { createEvent, getEvents, getEvent, editEvent, deleteEvent } from '../controllers/event.controller';
 import { editable, enterEdit, maintainEdit } from '../controllers/event_lock.controller';
 import express, { Request, Response, NextFunction } from 'express';
-// import { createUserRule, updateUserRule } from '../validate/user.validate';
+import { createEventRule, updateEventRule } from '../validate/event.validate';
 import cors from 'cors'
 const event_router = express.Router();
 
@@ -62,16 +62,16 @@ event_router.get('/:id', getEvent);
  *           schema:
  *             type: object
  *             properties:
- *               voucher_name:
+ *               event_name:
  *                 type: string
  *                 example: "Super sale 10.10"
  *               description:
  *                 type: text
  *                 example: "what ever you want"
- *               voucher_date_start:
+ *               event_date_start:
  *                 type: string
  *                 example: "2024-10-01T01:25:18.375+00:00"
- *               voucher_date_end:
+ *               event_date_end:
  *                 type: string
  *                 example: "2024-10-11T01:25:18.375+00:00"
  *               voucher_quantity:
@@ -81,10 +81,10 @@ event_router.get('/:id', getEvent);
  *                 type: number
  *                 example: "100"
  *             required:
- *               - voucher_name
+ *               - event_name
  *               - description
- *               - voucher_date_start
- *               - voucher_date_end 
+ *               - event_date_start
+ *               - event_date_end 
  *               - voucher_quantity 
  *               - voucher_released 
  *     responses:
@@ -93,7 +93,7 @@ event_router.get('/:id', getEvent);
  *       456:
  *         description: Some thing wrong
  */
-event_router.post('/', createEvent);
+event_router.post('/', createEventRule, createEvent);
 
 /**
  * @swagger
@@ -116,16 +116,16 @@ event_router.post('/', createEvent);
  *           schema:
  *             type: object
  *             properties:
- *               voucher_name:
+ *               event_name:
  *                 type: string
  *                 example: "Super sale 10.10"
  *               description:
  *                 type: text
  *                 example: "what ever you want"
- *               voucher_date_start:
+ *               event_date_start:
  *                 type: string
  *                 example: "2024-10-01T01:25:18.375+00:00"
- *               voucher_date_end:
+ *               event_date_end:
  *                 type: string
  *                 example: "2024-10-11T01:25:18.375+00:00"
  *               voucher_quantity:
@@ -135,10 +135,10 @@ event_router.post('/', createEvent);
  *                 type: number
  *                 example: "100"
  *             required:
- *               - voucher_name
+ *               - event_name
  *               - description
- *               - voucher_date_start
- *               - voucher_date_end 
+ *               - event_date_start
+ *               - event_date_end 
  *               - voucher_quantity 
  *               - voucher_released 
  *     responses:
@@ -147,7 +147,7 @@ event_router.post('/', createEvent);
  *       456:
  *         description: Some thing wrong
  */
-event_router.put('/:id', editEvent);
+event_router.put('/:id', updateEventRule,  editEvent);
 
 /**
  * @swagger
@@ -195,7 +195,7 @@ event_router.post('/:id/editable/me', editable);
 
 /**
  * @swagger
- * /event/{id}/editable/me:
+ * /event/{id}/editable/release:
  *   post:
  *     summary: Check editable event
  *     description: This endpoint allows you to check editable event.
@@ -207,29 +207,6 @@ event_router.post('/:id/editable/me', editable);
  *       - in: path
  *         name: id
  *         required: true
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               event_id:
- *                 type: string
- *                 example: "012313-3kd32s"
- *               user_id:
- *                 type: string
- *                 example: "012313-3kd32s"
- *               status:
- *                 type: string
- *                 example: "Locked"
- *               time_lock:
- *                 type: date
- *                 example: "2024-10-11T01:25:18.375+00:00"
- *             required:
- *               - event_id
- *               - user_id
- *               - time_lock
  *     responses:
  *       200:
  *         description: Editable for you
@@ -240,7 +217,7 @@ event_router.post('/:id/editable/release', enterEdit);
 
 /**
  * @swagger
- * /event/{id}/editable/me:
+ * /event/{id}/editable/maintain:
  *   post:
  *     summary: Check editable event
  *     description: This endpoint allows you to check editable event.
